--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 
 body {
   font-family: 'Arvo', serif;
-  font-size: 0.65em;
-  line-height: 1.3em;
+  font-size: 0.85em;
+  line-height: 1.25em;
 }
 
 p { 
@@ -16,20 +16,20 @@ p {
 }
 
 h1 {
-  font-size: 1.5em;
+  font-size: 1.40em;
   font-weight: bold;
-  margin: 0 0 20px 0;
+  margin: 0 0 15px 0;
 }
 
 h2 {
   font-family: 'Arvo', serif;
-  font-size: 1.25em;
+  font-size: 1.20em;
   font-weight:bold;
   margin: 0 0 15px 0;
 }
 
 h3 {
-  font-size: 1em;
+  font-size: 1.00em;
   font-weight:bold;
   margin: 0 0 10px 0;
 }
@@ -53,4 +53,45 @@ a, a.visited {
 
 a:hover {
   background-color:#eee;
+}
+
+.modal {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .8 )
+                url('http://abhi.co/loading.gif') 
+                50% 50% 
+                no-repeat;
+}
+
+/* When the body has the loading class, we turn
+   the scrollbar off with overflow:hidden */
+body.loading {
+  overflow: hidden;   
+}
+
+/* Anytime the body has the loading class, our
+   modal element will be visible */
+body.loading .modal {
+  display: block;
+}
+
+#shell-panel {
+  height: 500px;
+  background-color: #224b8d;
+  color: #90d299;
+  padding: 20px 20px 20px 20px;
+  font-family: 'Source Code Pro';
+  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+#shell-cli .prompt {
+  font-weight: bold;
 }
